<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/AppTheme">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTitleField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_marginTop"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/titleField_hint"
            android:inputType="text">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editAccountField"
        android:layout_width="match_parent"
        android:layout_height="@dimen/addPasswordTextInputLayout_height"
        android:layout_marginTop="@dimen/login_marginTop"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/accountField_hint"
            android:ems="10"
            android:inputType="text">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editUsernameField"
        android:layout_width="match_parent"
        android:layout_height="@dimen/addPasswordTextInputLayout_height"
        android:layout_marginTop="@dimen/login_marginTop"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:ems="10"
            android:inputType="text">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="256dp"
        android:layout_height="63dp">

        <ImageView
            android:id="@+id/editPageGenerateButton"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_refresh_icon" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editPasswordField"
            android:layout_width="@dimen/PasswordLayoutWidth"
            android:layout_height="@dimen/addPasswordTextInputLayout_height"
            android:layout_marginTop="@dimen/login_marginTop"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="@dimen/PasswordEditTextWidth"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textVisiblePassword">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>


    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editWebsiteField"
        android:layout_width="match_parent"
        android:layout_height="@dimen/addPasswordTextInputLayout_height"
        android:layout_marginTop="@dimen/login_marginTop"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/websiteField_hint"
            android:ems="10"
            android:inputType="textWebEmailAddress">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editNotesField"
        android:layout_width="match_parent"
        android:layout_height="@dimen/addPasswordTextInputLayout_height"
        android:layout_marginTop="@dimen/login_marginTop"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notesField"
            android:ems="10"
            android:inputType="textMultiLine">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>




</LinearLayout>