<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:theme="@style/registerTheme">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        app:srcCompat="@drawable/profile_icon" />

    <RelativeLayout
        android:layout_width="371dp"
        android:layout_height="72dp">

        <TextView
            android:id="@+id/profileFullnameField"
            android:layout_width="160dp"
            android:layout_height="29dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="85dp"
            android:layout_marginBottom="18dp"
            android:text=""
            android:textAlignment="viewStart" />

        <TextView
            android:id="@+id/fullNameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="18dp"
            android:layout_toStartOf="@+id/profileFullnameField"
            android:text="@string/profileFullnameLabel"
            android:textAlignment="viewEnd" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="371dp"
        android:layout_height="72dp">

        <TextView
            android:id="@+id/usernameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="18dp"
            android:layout_toStartOf="@+id/profileUsernameField"
            android:text="@string/profileUsernameLabel"
            android:textAlignment="viewEnd" />

        <TextView
            android:id="@+id/profileUsernameField"
            android:layout_width="160dp"
            android:layout_height="29dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="85dp"
            android:layout_marginBottom="18dp"
            android:text=""
            android:textAlignment="viewStart" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="371dp"
        android:layout_height="72dp">

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="18dp"
            android:layout_toStartOf="@+id/profileEmailField"
            android:text="@string/profileEmailLabel"
            android:textAlignment="viewEnd" />

        <TextView
            android:id="@+id/profileEmailField"
            android:layout_width="160dp"
            android:layout_height="29dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="85dp"
            android:layout_marginBottom="18dp"
            android:text=""
            android:textAlignment="viewStart" />
    </RelativeLayout>

    <Button
        android:id="@+id/deleteAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/profileDeleteAccount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</LinearLayout>
