<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginPage_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/LoginPageTheme">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginUsernameField"
        android:layout_width="@dimen/loginTextInputLayout_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        style="@style/loginTextInputStyle"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="15">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username_hint"
            android:inputType="textEmailAddress">

        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPasswordField"
        android:layout_width="@dimen/loginTextInputLayout_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_marginTop"
        android:layout_gravity="center_horizontal"
        style="@style/loginTextInputStyle"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword">

        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/registerButton"
            android:layout_width="96dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/registerbutton"
            android:layout_marginTop="@dimen/button_vertical_margin"
            android:layout_marginEnd="@dimen/button_horizontal_margin"
            android:text="@string/registerButton" />

        <ImageButton
            android:id="@+id/loginButton"
            android:layout_width="96dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/button_horizontal_margin"
            android:layout_marginTop="@dimen/button_vertical_margin"
            android:backgroundTint="@color/white"
            app:srcCompat="@drawable/loginbutton" />
    </RelativeLayout>


</LinearLayout>
